# be-a-boss

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
docs/: README.md  architecture.md  behaviour.md  concepts.md  extending.md
landing/: index.html
src/beaboss/: __init__.py  __main__.py  config.py  logsetup.py  rendering.py
src/beaboss/cli/: __init__.py  __main__.py  tui.py
src/beaboss/core/: agent_backend.py  engine.py  names.py  ports.py  prompts.py  session.py  store.py  worktrees.py
src/beaboss/transports/: cli.py  telegram.py  websocket.py
src/beaboss/web/: __init__.py  __main__.py
src/beaboss/web/static/: client.js  index.html
src/tasm/: __init__.py  __main__.py  claude_session.py  config.py  manager.py  store.py  telegram_bot.py
src/tasm/core/: __init__.py  engine.py  names.py  ports.py  session.py  store.py  worktrees.py
src/tasm/transports/: __init__.py  telegram.py
tests/: test_cli.py  test_codex_backend.py  test_codex_e2e.py  test_config.py  test_core_session.py  test_core_store.py  test_engine.py  test_media.py  test_rendering.py  test_store.py  test_telegram.py  test_websocket.py  test_worktrees.py
vscode/: .gitignore  .vscodeignore  README.md  esbuild.js  package-lock.json  package.json
vscode/media/: client.js  main.css
vscode/src/: extension.js
web/: client.js  index.html
