[project]
name = "telegram-agentic-session-manager"
version = "0.1.0"
description = "Telegram bot that manages parallel Claude Code sessions — one live session per forum topic."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "python-telegram-bot>=21.6",
    "python-dotenv>=1.0.1",
]

[project.scripts]
tasm = "tasm.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tasm"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
