[project]
name = "be-a-boss"
version = "0.1.0"
description = "Run your own agent org over chat: an orchestrator hires and supervises coder agents, each a visible, joinable thread. Self-hosted, Claude Code."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "python-telegram-bot>=21.6",
    "python-dotenv>=1.0.1",
]

[project.scripts]
boss = "beaboss.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beaboss"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
