[project]
name = "be-a-boss"
version = "0.1.0"
description = "Run your own agent org: an orchestrator hires and supervises worker agents you watch and steer, each a visible, joinable thread. Self-hosted; pluggable surfaces (Telegram/Web) and agent backends (Claude Code/Codex)."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai-agents", "agent-orchestration", "coding-agent", "claude-code", "codex", "self-hosted", "telegram-bot", ]
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "python-telegram-bot[rate-limiter]>=21.6",
    "python-dotenv>=1.0.1",
    "websockets>=16.1.1",
]

[project.urls]
Homepage = "https://github.com/Dri-water/be-a-boss"
Repository = "https://github.com/Dri-water/be-a-boss"
Issues = "https://github.com/Dri-water/be-a-boss/issues"

[project.scripts]
boss = "beaboss.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beaboss"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
